:art: Various optimizations